# imav2019

./: .gitmodules  .travis.yml  DEADJOE  Installation.md  README.md  imav2019_README.md  package.xml
.logistics/: _README_.md
imav_detector/: CMakeLists.txt  README.md  package.xml
imav_detector/aruco/src/aruco/: markerdetector.cpp
imav_detector/aruco_ros/: CMakeLists.txt  package.xml
imav_detector/aruco_ros/cfg/: input.yaml
imav_detector/aruco_ros/include/aruco_ros/: Load_Params.h  Prediction.h  Square_Filter.h  Update.h  input.h
imav_detector/aruco_ros/launch/: Const_acc_Params.yaml  KF.launch  NConst_acc_Params .yaml  Params.yaml  sim.launch  single.launch
imav_detector/aruco_ros/msg/: object.msg
imav_detector/aruco_ros/src/: Main.cpp  filter.py  fin_pos.cpp  input.cpp  kalman_filter.cpp  object_pos.cpp  simple_single.cpp
imav_env/: CMakeLists.txt  package.xml
imav_env/launch/: one_firefly.launch  sitl.launch  spawn_mav.launch  three_firefly.launch
imav_env/models/: icarus.xacro  icarus_base.xacro  magnus.xacro  magnus_base.xacro  multirotor_base.xacro  vega.xacro  vega_base.xacro
imav_env/models/Blue_Package/meshes/: bluebox.dae
imav_env/models/Helipad/: model.config  model.sdf
imav_env/models/Helipad/meshes/: h.dae
imav_env/models/Red_Mailbox/: model.sdf
imav_env/models/Red_Package/: model.config
imav_env/models/Red_Package/meshes/: redbox.dae
imav_env/models/imav/: model.config  model.sdf
imav_env/models/iris/: iris.sdf
imav_env/worlds/: outdoor_imav.world  test.world
imav_optimizer/: CMakeLists.txt  package.xml
imav_optimizer/launch/: optimizer.launch
imav_optimizer/src/: mav_optimizer_node.cxx  optimizer_node.cxx
imav_planner/: CMakeLists.txt  package.xml
imav_planner/cfg/: planner.yaml
imav_planner/include/imav_planner/: planner.h  planner_test.h
imav_planner/launch/: planner.launch  planner2.launch  router.launch
imav_planner/msg/: task_info.msg
imav_planner/params/: planner.yaml
imav_planner/src/: detector_node.cxx  gripper_control.cxx  planner.cxx  planner.h  planner2.cxx  planner_node.cxx  planner_test.cxx  planner_test.h  router.cxx
imav_sim/: CMakeLists.txt  package.xml
imav_sim/launch/: spawn_mav.launch  three_firefly.launch
imav_sim/models/: icarus_base.xacro  multirotor_base.xacro
imav_sim/models/Blue_Mailbox/meshes/: blue.dae
imav_sim/models/Red_Mailbox/: model.config
imav_sim/models/Red_Package/: model.sdf
imav_sim/models/Yellow_Mailbox/: model.config
imav_sim/models/Yellow_Package/: model.config  model.sdf
imav_sim/models/Yellow_Package/meshes/: yellowbox.dae
imav_sim/src/: gripper_control.cxx
imav_sim/worlds/: outdoor_imav.world
imav_trajectory_generator/: CMakeLists.txt  README.md  package.xml
imav_trajectory_generator/launch/: trajectory.launch
imav_trajectory_generator/src/: icarus_trajectory_node.cxx  icarus_trajectory_sampler_node.cxx  magnus_trajectory_node.cxx  magnus_trajectory_sampler_node.cxx  time_evaluation_node.cpp  trajectory_node.cxx  trajectory_sampler_node.cxx  vega_trajectory_node.cxx  vega_trajectory_sampler_node.cxx
install/: install_https.rosinstall
launch/: spawn_mav.launch  three_firefly.launch
models/: firefly_base.xacro  icarus.xacro  magnus.xacro  magnus_base.xacro  vega.xacro  vega_base.xacro
models/Blue_Mailbox/: model.config  model.sdf
models/Blue_Package/: model.config  model.sdf
models/Red_Mailbox/meshes/: red.dae
models/Yellow_Mailbox/: model.sdf
models/Yellow_Mailbox/meshes/: yellow.dae
worlds/: outdoor_ps.world
